[tool.poetry]
name = "Async-FM"
version = "0.0.2"
description = "Python library for interacting with the Last.fm API asynchronously."
authors = ["NachABR <nachabr@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "asyncfm", from = "src"}]
homepage = "https://github.com/NachABR/async-fm"
repository = "https://github.com/NachABR/async-fm.git"
keywords = ["python", "lastfm", "aiohttp", "async"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.7"
pydantic = "1.10.7"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pylint = "2.17.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
