[tool.poetry]
name = "Async-FM"
version = "0.0.7"
description = "Python library for interacting with the Last.fm API asynchronously."
authors = ["NachABR <nachabr@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "asyncfm", from = "src"}]
homepage = "https://github.com/NachABR/async-fm"
repository = "https://github.com/NachABR/async-fm.git"
keywords = ["python", "lastfm", "aiohttp", "async"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylint = "^2.17.7"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
